# survey-studio-clients

./: .gitignore  LICENSE  Makefile  README.md  examples.py  pyproject.toml
src/core/: outgoing_calls.py
src/requests/: outgoing_calls_request.py
survey_studio_clients/: settings.py
survey_studio_clients/api_clients/: base.py  load_arrow_abbot.py  operator_work_time.py  outgoing_calls.py  projects.py
survey_studio_clients/core/: base.py  operator_work_time.py  outgoing_calls.py  projects.py
survey_studio_clients/requests/: operator_work_time_request.py  outgoing_calls_request.py  projects_abbot_request.py  projects_request.py
survey_studio_clients/tests/: test_base.py
survey_studio_clients/web_scrapers/: daily_counters.py
